# Guardian

./: .gitignore  README.md  Rodar.md  Run.md  SECURITY.md  config.json  pyproject.toml  requirements.txt
data/: hash_cache.json  signature_db.json
reports/: scan_report_20260422T200534133885Z.json  scan_report_20260422T200544490509Z.json
rules/: README.md  injection_patterns.yar  powershell_suspicious.yar  test_eicar.yar
src/guardian_av/: __init__.py  cache.py  cli.py  config.py  gui.py  heuristics.py  quarantine.py  reporting.py  scanner.py  signatures.py  utils.py  watcher.py  yara_engine.py
src/guardian_av.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cache.py  test_heuristics.py  test_info.py  test_scanner_profiles.py  test_self_scan_regression.py
