[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-av"
version = "0.5.1"
description = "Educational antivirus-style scanner prototype with desktop UI, heuristics, YARA, and watchdog support"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
guardian-av = "guardian_av.cli:main"
guardian-av-ui = "guardian_av.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
